--- a/apis.yml
+++ b/apis.yml
@@ -1,30 +1,38 @@
 aid: dbt
-name: dbt
-description: >-
-  Every time dbt Cloud runs a project, it generates and stores information about
-  the project. The metadata includes details about your ...
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2025-01-08'
-modified: '2025-01-08'
 url: https://raw.githubusercontent.com/api-evangelist/dbt/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: dbt:dbt
     name: dbt
+    tags:
+      - Projects
+      - Data
+    humanURL: https://docs.getdbt.com/docs/dbt-cloud-apis/discovery-api
+    properties:
+      - url: https://docs.getdbt.com/docs/dbt-cloud-apis/discovery-api
+        type: Documentation
     description: >-
       Every time dbt Cloud runs a project, it generates and stores information
-      about the project. The metadata includes details about your ...
-    humanURL: https://docs.getdbt.com/docs/dbt-cloud-apis/discovery-api
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: https://docs.getdbt.com/docs/dbt-cloud-apis/discovery-api
+      about the project. The metadata includes details about your projects
+      models, sources, and other nodes along with their execution results. With
+      the dbt Cloud Discovery API, you can query this comprehensive information
+      to gain a better understanding of your DAG and the data it produces.
+name: dbt
+tags:
+  - Projects
+  - Data
+type: Contract
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2025-01-08'
+modified: '2025-03-01'
+position: Consuming
+description: >-
+  Every time dbt Cloud runs a project, it generates and stores information about
+  the project. The metadata includes details about your projects models,
+  sources, and other nodes along with their execution results. With the dbt
+  Cloud Discovery API, you can query this comprehensive information to gain a
+  better understanding of your DAG and the data it produces.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
